Forum Update - Added TimeStamp - Styling included

--- a/package.json
+++ b/package.json
@@ -2,5 +2,22 @@
   "dependencies": {
     "@supabase/supabase-js": "^1.35.3",
     "firebase": "^9.9.0"
-  }
+  },
+  "name": "firebase",
+  "description": "Project for Orbital '22",
+  "version": "1.0.0",
+  "main": "webpack.config.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nadiahhh/MoneyQuest.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Nadiahhh/MoneyQuest/issues"
+  },
+  "homepage": "https://github.com/Nadiahhh/MoneyQuest#readme"
 }
